--- a/templates/base.html
+++ b/templates/base.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Keanue Reeves Official Site</title>
+    <title>Jason Momoa Official Site</title>
     
     <style>
         :root {
@@ -209,7 +209,7 @@
 <body>
 
 <nav class="navbar">
-    <a href="{% url 'home' %}" class="logo">Keanue Reeves Official Page</a>
+    <a href="{% url 'home' %}" class="logo">Jason Momoa Official Page</a>
     <div class="nav-links" id="navLinks">
         <a href="{% url 'home' %}">Home</a>
         <a href="{% url 'author' %}">Author</a>
@@ -221,7 +221,7 @@
         <a href="{% url 'my_fanscard' %}">My Standard Card</a>
         <a href="{% url 'my_cards' %}">my Premium Card</a>
             <a href="{% url 'chat_with_admin' %}">
-                Chat with Keanue<span class="notif-badge" id="chatBadge"></span>
+                Chat with Jason<span class="notif-badge" id="chatBadge"></span>
             </a>
             <a href="{% url 'logout' %}">Logout ({{ user.username }})</a>
         {% else %}
@@ -257,8 +257,8 @@
 
 <footer>
     <div class="footer-section">
-        <h4>About Keanue Reeves</h4>
-        <p>This site provides fast, secure, and reliable chatting with Keanue Reeves the original founder of this site.</p>
+        <h4>About Jason Momoa</h4>
+        <p>This site provides fast, secure, and reliable chatting with Jason Momoa the original founder of this site.</p>
     </div>
     <div class="footer-section">
         <h4>Quick Links</h4>
